--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav ul li a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background: url('hero-bg.jpg') no-repeat center center/cover;
+     background: url('hero-bg.webp') no-repeat center center/cover;
     position: relative;
 }
 
